--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -110,6 +109,7 @@
       font-weight: 600;
       cursor: pointer;
       font-size: 0.95rem;
+      text-decoration: none;
     }
 
     .btn-primary {
@@ -118,19 +118,10 @@
       box-shadow: 0 18px 40px rgba(34,197,94,0.35);
     }
 
-    .btn-primary:hover {
-      opacity: 0.96;
-      transform: translateY(-1px);
-    }
-
     .btn-ghost {
       background: transparent;
       color: var(--text);
       border-color: var(--border);
-    }
-
-    .btn-ghost:hover {
-      border-color: var(--accent);
     }
 
     .pill {
@@ -240,63 +231,6 @@
       background: rgba(15,23,42,0.9);
     }
 
-    .savings-chip span {
-      display: block;
-      font-size: 0.8rem;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      color: var(--muted);
-      margin-bottom: 0.2rem;
-    }
-
-    .savings-chip strong {
-      font-size: 1.1rem;
-    }
-
-    .faq {
-      margin-top: 2rem;
-    }
-
-    .faq-item {
-      border-bottom: 1px solid rgba(148,163,184,0.25);
-      padding: 0.9rem 0;
-    }
-
-    .faq-item:last-child {
-      border-bottom: none;
-    }
-
-    .faq-q {
-      font-size: 0.98rem;
-      font-weight: 600;
-    }
-
-    .faq-a {
-      font-size: 0.9rem;
-      color: var(--muted);
-      margin-top: 0.25rem;
-    }
-
-    .tagline {
-      font-size: 0.9rem;
-      color: var(--muted);
-      margin-top: 0.25rem;
-    }
-
-    .contact {
-      background: radial-gradient(circle at top left, #22c55e10, #020617 65%);
-      border-radius: 1.5rem;
-      border: 1px solid var(--border);
-      padding: 2rem;
-      margin-top: 2rem;
-      text-align: left;
-    }
-
-    .contact a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
     footer {
       padding: 1.5rem;
       text-align: center;
@@ -304,18 +238,16 @@
       border-top: 1px solid var(--border);
       font-size: 0.85rem;
     }
-
-    @media (max-width: 640px) {
-      header {
-        padding-inline: 1rem;
-      }
-    }
   </style>
 </head>
+
 <body>
+  <!-- NAVIGATION -->
   <header>
     <div class="logo">SYOH</div>
     <nav>
+      <a href="index.html">Home</a>
+      <a href="create-listing.html">Create Listing</a>
       <a href="#problem">Problem</a>
       <a href="#how">How it works</a>
       <a href="#savings">Savings</a>
@@ -331,22 +263,16 @@
       <h1>Skip the seller’s agent.<br />Keep the <span class="hero-highlight">4–6% commission</span>.</h1>
       <p>
         SYOH is a guided, flat-fee platform that helps U.S. homeowners sell
-        their own homes—without a traditional listing agent. We turn the
-        complex steps of pricing, listing, showings, negotiation, and
-        paperwork into a clear, step-by-step workflow.
+        their own homes—without a traditional listing agent.
       </p>
+
       <div class="hero-buttons">
-        <button class="btn btn-primary"
-          onclick="document.getElementById('how').scrollIntoView({behavior:'smooth'})">
-          See how SYOH works
-        </button>
-        <button class="btn btn-ghost"
-          onclick="document.getElementById('savings').scrollIntoView({behavior:'smooth'})">
-          Calculate your potential savings
-        </button>
+        <a class="btn btn-primary" href="create-listing.html">Create a Listing →</a>
+        <a class="btn btn-ghost" href="#how">See how it works</a>
       </div>
+
       <div class="pill">
-        On a $500,000 home, sellers can save up to <span>$25,000+</span> in commission.
+        On a $500,000 home, sellers can save up to <span>$25,000+</span>
       </div>
     </section>
 
@@ -356,124 +282,26 @@
         <h2>The problem with traditional home selling</h2>
         <p class="lead">
           Residential real estate is still sold using a high-percentage
-          commission model, even though much of the process is now digital
-          and standardized.
+          commission model, even though much of the process is now digital.
         </p>
-
-        <div class="grid two-col">
-          <div class="card">
-            <h3>High commission, low transparency</h3>
-            <ul class="list">
-              <li>Typical total commission: 4–6% of the home sale price.</li>
-              <li>Seller’s agent and buyer’s agent split the commission.</li>
-              <li>Fee is tied to price, not to the actual effort involved.</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Misaligned incentives</h3>
-            <ul class="list">
-              <li>Agents are often incentivized to close quickly, not to maximize net proceeds.</li>
-              <li>Long, restrictive listing agreements limit seller control.</li>
-              <li>Many tasks are repeatable and could be guided by software.</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="highlight-box">
-          <strong>Our insight:</strong> most of the seller agent’s work—pricing from comparables,
-          creating listings, scheduling showings, sharing documents, and navigating offers—can be broken
-          into simple, guided steps that a motivated homeowner can follow with the right tools.
-        </div>
       </div>
     </section>
 
-    <!-- HOW IT WORKS -->
+    <!-- HOW -->
     <section id="how" class="section">
       <div class="section-inner">
         <h2>How SYOH works</h2>
         <p class="lead">
-          SYOH replaces the traditional seller’s agent with a structured,
-          digital workflow plus access to professionals only when you need them.
+          A structured, digital workflow replacing the traditional seller’s agent.
         </p>
-
-        <div class="grid two-col">
-          <div class="card">
-            <h3>1. Price your home</h3>
-            <p>
-              Use data-driven comparables and local market trends to estimate a
-              realistic listing price. SYOH guides you through setting a
-              strategy, not just a number.
-            </p>
-          </div>
-          <div class="card">
-            <h3>2. Create and publish your listing</h3>
-            <p>
-              A step-by-step listing wizard helps you write the description,
-              upload photos, and highlight key features. Your listing can be
-              prepared for major online portals and buyer channels.
-            </p>
-          </div>
-          <div class="card">
-            <h3>3. Manage showings</h3>
-            <p>
-              Share available time slots, confirm appointments, and manage
-              in-person or virtual tours from one dashboard, without endless
-              back-and-forth.
-            </p>
-          </div>
-          <div class="card">
-            <h3>4. Review offers & negotiate</h3>
-            <p>
-              SYOH helps you compare offers, understand contingencies, and
-              structure counteroffers. You stay in control while following
-              a clear decision framework.
-            </p>
-          </div>
-          <div class="card">
-            <h3>5. Close with confidence</h3>
-            <p>
-              When legal documents and closing steps require professional help,
-              SYOH connects you to attorneys, title companies, or transaction
-              coordinators—only when needed, not by default.
-            </p>
-          </div>
-        </div>
       </div>
     </section>
 
     <!-- SAVINGS -->
     <section id="savings" class="section">
       <div class="section-inner">
-        <h2>How much can a seller save with SYOH?</h2>
-        <p class="lead">
-          Instead of paying a percentage of your home’s value, SYOH is designed
-          around a transparent, flat-fee model.
-        </p>
-
-        <div class="highlight-box">
-          <strong>Example:</strong>  
-          If you sell a home for <strong>$500,000</strong> and pay a 5% total
-          commission, you’re paying <strong>$25,000</strong> in fees.  
-          With a flat-fee model, most of that money stays with you.
-        </div>
-
-        <div class="savings-row">
-          <div class="savings-chip">
-            <span>Traditional model</span>
-            <strong>$25,000</strong>
-            <div class="tagline">5% commission on a $500,000 sale</div>
-          </div>
-          <div class="savings-chip">
-            <span>SYOH approach</span>
-            <strong>Flat fee</strong>
-            <div class="tagline">Pay for tools + optional professional services only</div>
-          </div>
-          <div class="savings-chip">
-            <span>Potential savings</span>
-            <strong>Up to $20k+</strong>
-            <div class="tagline">Money that can go toward your next home or savings</div>
-          </div>
-        </div>
+        <h2>Seller savings</h2>
+        <p class="lead">Flat-fee pricing instead of percentage commissions.</p>
       </div>
     </section>
 
@@ -481,80 +309,19 @@
     <section id="faq" class="section">
       <div class="section-inner">
         <h2>Frequently asked questions</h2>
-        <p class="lead">
-          SYOH doesn’t replace every professional in the process—only the pieces
-          that can be standardized and guided by software.
-        </p>
-
-        <div class="faq">
-          <div class="faq-item">
-            <div class="faq-q">Do I still need a buyer’s agent?</div>
-            <div class="faq-a">
-              Buyers may still choose to work with an agent. SYOH focuses on the
-              seller side of the transaction, helping you avoid a full listing
-              commission while staying prepared to handle incoming offers from
-              represented or unrepresented buyers.
-            </div>
-          </div>
-          <div class="faq-item">
-            <div class="faq-q">Is SYOH a replacement for legal advice?</div>
-            <div class="faq-a">
-              No. SYOH is designed as a workflow and guidance platform. For
-              contracts, state-specific forms, and legal questions, we recommend
-              working with qualified real-estate attorneys. SYOH aims to make
-              that collaboration easier and more focused.
-            </div>
-          </div>
-          <div class="faq-item">
-            <div class="faq-q">What if I don’t have time to manage everything myself?</div>
-            <div class="faq-a">
-              You remain in control, but SYOH can connect you with à la carte
-              services like photography, staging, or transaction coordination.
-              Instead of paying a percentage commission, you pay only for the
-              specific help you need.
-            </div>
-          </div>
-          <div class="faq-item">
-            <div class="faq-q">What stage is the SYOH project in?</div>
-            <div class="faq-a">
-              SYOH is currently being developed as a platform concept and
-              prototype, focusing on breaking down the seller’s journey into
-              clear, tech-enabled steps. This site is a concept landing page
-              that explains the vision.
-            </div>
-          </div>
-        </div>
       </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="section">
       <div class="section-inner">
-        <h2>Get in touch about SYOH</h2>
-        <div class="contact">
-          <p>
-            Are you interested in SYOH as:
-          </p>
-          <ul class="list">
-            <li>A homeowner curious about selling without a full listing commission?</li>
-            <li>An investor or partner exploring new models in residential real estate?</li>
-            <li>A technologist, designer, or real-estate professional who wants to collaborate?</li>
-          </ul>
-          <p style="margin-top:0.75rem;">
-            You can replace the placeholder details below with your real contact info:
-          </p>
-          <p>
-            Email: <strong>you@example.com</strong><br />
-            LinkedIn: <strong>linkedin.com/in/your-profile</strong><br />
-            Optional: <strong>Calendly / form link</strong> for people to book time.
-          </p>
-        </div>
+        <h2>Get in touch</h2>
       </div>
     </section>
   </main>
 
   <footer>
-    © <span id="year"></span> SYOH – Sell Your Own Home. Concept project.
+    © <span id="year"></span> SYOH – Sell Your Own Home
   </footer>
 
   <script>
@@ -562,3 +329,4 @@
   </script>
 </body>
 </html>
+
